# example-apps

./: .editorconfig  .gitignore  .pre-commit-config.yaml  AGENTS.md  CONTRIBUTING.md  Cargo.toml  Makefile  README.md  flake.nix  pyproject.toml
.github/ISSUE_TEMPLATE/: config.yml
.github/workflows/: tests.yml
assets/diagrams/: code_explorer.dot  fraud.dot  graphrag.dot  recommendation.dot
python/fraud/: README.md
python/fraud/src/fraud_detection_stream/: __init__.py  __main__.py  detectors.py  generator.py  graph_store.py  main.py
python/fraud/tests/: test_detectors.py  test_generator.py
python/recommendation/: README.md
python/recommendation/src/social_recommendations/: __init__.py  __main__.py  embeddings.py  main.py  network.py  recommend.py  seed.py
python/recommendation/tests/: test_network.py  test_recommend.py
rust/code-explorer/: Cargo.toml  README.md
rust/code-explorer/src/: index.rs  main.rs
rust/graphrag-agent/: Cargo.toml  README.md
rust/graphrag-agent/sample_docs/: aster-program.md  helia-probe.md  kestrel-station.md  people.md  propulsion.md  talos-lander.md
rust/graphrag-agent/src/: embed.rs  ingest.rs  llm.rs  main.rs
