[workspace]
members = ["rust/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "MIT"
rust-version = "1.85.0"
publish = false

[workspace.dependencies]
issundb = "0.1.0-alpha.5"

[profile.release]
strip = "debuginfo"
panic = "unwind"
codegen-units = 1
lto = true

[profile.test]
debug = true
