[package]
name = "code-explorer"
description = "A code explorer (graph and dependency) built on IssunDB"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
issundb = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
syn = { version = "2", features = ["full", "visit"] }
walkdir = "2"
