[package]
name = "graphrag-agent"
description = "A GraphRAG pipeline that uses IssunDB's hybrid retrieval API"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true
publish.workspace = true

[dependencies]
issundb = { workspace = true }
anyhow = "1"
clap = { version = "4", features = ["derive"] }
serde_json = "1"
ureq = { version = "=2", features = ["json"] }
walkdir = "2"
